samples/k8s/istio/app-deployment-h2-istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: book-collection-app
    version: 1.0-SNAPSHOT
  name: book-collection-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-collection-app
      version: 1.0-SNAPSHOT
  template:
    metadata:
      labels:
        app: book-collection-app
        version: 1.0-SNAPSHOT
    spec:
      containers:
        - args:
          image: mbaran/book-collection-app:1.0-SNAPSHOT
          imagePullPolicy: Always
          name: book-collection-app
#          readinessProbe:
#            httpGet:
#              path: /actuator/health
#              port: 8080
#              scheme: HTTP
#          livenessProbe:
#            httpGet:
#              path: /actuator/health
#              port: 8080
#              scheme: HTTP
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: book-collection-app
    service: book-collection-app
  name: book-collection-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: book-collection-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-collection-app-gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
    - http:
        paths:
          - path: /h2
            pathType: Prefix
            backend:
              service:
                name: book-collection-app
                port:
                  number: 80
